--- a/_data/2020/rutgers/speakers.yml
+++ b/_data/2020/rutgers/speakers.yml
@@ -13,6 +13,11 @@
 - name: Andrey Tomashevskiy
   image: /assets/images/andreyt.jpg
   bio: "Andrey Tomashevskiy is Assistant Professor of Political Science at Rutgers University."
+
+- name: Simone Zhang
+  image: /assets/images/SimoneZhang.jpg
+  bio: "Simone Zhang is a PhD student in Sociology at Princeton University interested in social stratification, organizations, and how social policy is implemented on the ground."
+ 
   
 - name: More to be added soon ...
 
