--- a/_data/2020/copenhagen/hero.yml
+++ b/_data/2020/copenhagen/hero.yml
@@ -1,3 +1,3 @@
 header_2: "June 14 to June 26, 2020 | Copenhagen"
-header_3: "Sponsored by University of Copenhagen"
-location: "Copenhagen"
+header_3: "Sponsored by Department of Sociology and Centre for Social Data Science at the University of Copenhagen"
+location: "Copenhagen, Denmark"
