--- a/_data/2020/copenhagen/faculty.yml
+++ b/_data/2020/copenhagen/faculty.yml
@@ -8,7 +8,7 @@
   bio: Anne Petersen is a Ph.D. student at the Section of Biostatistics at the University of Copenhagen. Her PhD project aims to develop new statistical methods for integrating data driven machine learning methods with dynamic life course analysis. She is the primary developer of two R-packages on CRAN, dataMaid and PCADSC.  
   website: https://github.com/annennenne
 
-- name: Hjalmar Alexander Bang Carlsen
+- name: Hjalmar Bang Carlsen
   image: /assets/images/hcarlsen.jpg
-  bio: Hjalmar is a postdoctoral researcher at the Centre for Social Data Science at the University of Copenhagen. He works at the intersection of social data science, political sociology and pragmatism. He is currently working on two main projects focusing on 1) activists patterns of engagement, and 2) methodological issues within quantitative and qualitative text analysis, and especially their combination. 
+  bio: Hjalmar Bang Carlsen is a postdoctoral researcher at the Centre for Social Data Science at the University of Copenhagen. He works at the intersection of social data science, political sociology and pragmatism. He is currently working on two main projects focusing on 1) activists patterns of engagement, and 2) methodological issues within quantitative and qualitative text analysis, and especially their combination. 
   website: https://scholar.google.dk/citations?user=um6jqCgAAAAJ&hl=en
