--- a/_data/2020/copenhagen/faculty.yml
+++ b/_data/2020/copenhagen/faculty.yml
@@ -1,6 +1,6 @@
 - name: Friedolin Merhout
   image: /assets/images/fmerhout.jpg
-  bio: Friedolin Merhout is an Assistant Professor in the Department of Sociology and at the Centre for Social Data Science at the University of Copenhagen. He uses computational and experimental methods to examine intergroup relations such as between immigrants and natives, political partisans, or religious groups. His research leverages digital trace, text, survey, and administrative data to generate novel insights about established social scientific puzzles.
+  bio: Friedolin Merhout is an Assistant Professor in the Department of Sociology and an affiliate of the Centre for Social Data Science at the University of Copenhagen. He uses computational and experimental methods to examine intergroup relations such as between immigrants and natives, political partisans, or religious groups. His research leverages digital trace, text, survey, and administrative data to generate novel insights about established social scientific puzzles.
   website: https://fmerhout.github.io/
 
 - name: Anne Helby Petersen
