--- a/_data/2020/konstanz/location.yml
+++ b/_data/2020/konstanz/location.yml
@@ -1,6 +1,6 @@
 image: /assets/images/konstanz.jpg
 title: Konstanz
 subtitle: Konstanz, Germany
-description: "From the evening of July 26 to August 7 2020, the University of Konstanz will host a partner event for the Summer Institute in Computational Social Science."
+description: "From the evening of July 19 to July 31, 2020, the University of Konstanz will host a partner event for the Summer Institute in Computational Social Science."
 link: konstanz
 year: 2020
