--- a/_data/2020/oxford/schedule.yml
+++ b/_data/2020/oxford/schedule.yml
@@ -1,3 +1,17 @@
-- date: 2020-07-28
+- date: 2020-07-5
+  name: Participants arrive
   events:
-    - name: "Schedule coming soon..."
+    - name: "<b>Informal opening dinner</b> (Junior Common Room, Nuffield College)"
+      time: "18:30 - 21:30"
+      
+- date: 2020-07-6
+  name: Start of the Oxford SICSS!
+  events:
+    - name: Schedule to be confirmed...
+      time: "09:00 - 18:00"
+      
+- date: 2020-07-16
+  name: End of the Oxford SICSS!
+  events:
+    - name: "<b>Informal leaving dinner</b> (venue To be confirmed)"
+      time: "18:00 - 21:30" 
