fixed a typo in the oxford schedule.yml

--- a/_data/2020/oxford/schedule.yml
+++ b/_data/2020/oxford/schedule.yml
@@ -13,5 +13,5 @@
 - date: 2020-07-16
   name: End of the Oxford SICSS!
   events:
-    - name: "<b>Informal leaving dinner</b> (venue To be confirmed)"
-      time: "18:00 - 21:30" 
+    - name: "<b>Informal leaving dinner</b> (venue to be confirmed)"
+      time: "18:30 - 21:30" 
