--- a/_data/2020/helsinki/hero.yml
+++ b/_data/2020/helsinki/hero.yml
@@ -1,3 +1,3 @@
-header_2: "June X to June X, 2020 | Helsinki"
+header_2: "May 25 to June 5, 2020 | Helsinki"
 header_3: "Sponsored by University of Helsinki"
 location: "Helsinki"
