Initial Commit of Primary Edits for Stellenbosch 2020

--- a/_data/2020/stellenbosch/speakers.yml
+++ b/_data/2020/stellenbosch/speakers.yml
@@ -1,1 +1,2 @@
-- name:
+- name: Aldu Cornelissen
+  bio: "Dr Aldu Cornelissen is a data scientist at Kantar. He is a specialist in Social Network Analysis and is a co-founder of the Computational Social Science Group at Stellenbosch University."
