--- a/_data/2020/stellenbosch/hero.yml
+++ b/_data/2020/stellenbosch/hero.yml
@@ -1,3 +1,3 @@
-header_2: "June 14 to June 27, 2020 | Stellenbosch"
-header_3: "Sponsored by Stellenbosch University"
+header_2: "15–26 June 2020 | Stellenbosch University | Stellenbosch | South Africa"
+header_3: "Hosted by the Department of Information Science at Stellenbosch University"
 location: "Stellenbosch"
