--- a/_data/2020/stellenbosch/location.yml
+++ b/_data/2020/stellenbosch/location.yml
@@ -1,6 +1,6 @@
 image: /assets/images/stellenbosch.jpg
 title: Stellenbosch
 subtitle: Stellenbosch, South Africa
-description: "From the evening of June 14 to June 27 2020, Stellenbosch University will host a partner event for the Summer Institute in Computational Social Science."
+description: "From 15 to 26 June 2020, the Department of Information Science at Stellenbosch University will host a partner event for the Summer Institute in Computational Social Science."
 link: stellenbosch
 year: 2020
