--- a/_data/2020/copenhagen/location.yml
+++ b/_data/2020/copenhagen/location.yml
@@ -1,6 +1,6 @@
 image: /assets/images/copenhagen.jpg
 title: Copenhagen
 subtitle: Copenhagen, Denmark
-description: "From the evening of June 14 to the evening of June 26 2020, the Department of Sociology and the Centre for Social Data Science at the University of Copenhagen will host a partner event for the Summer Institute in Computational Social Science."
+description: "From the evening of June 14 to June 26, 2020, the Department of Sociology and the Centre for Social Data Science at the University of Copenhagen will host a partner event for the Summer Institute in Computational Social Science."
 link: copenhagen
 year: 2020
