update konstanz faculty

--- a/_data/2020/konstanz/faculty.yml
+++ b/_data/2020/konstanz/faculty.yml
@@ -15,6 +15,6 @@
   
 - name: Susumu Shikano
   image: /assets/images/susumu_shikano.jpg
-  bio: "Susumu Shikano is Professor of Political Methodology at University of Konstanz. He is doing research on spatial models of politics and diverse topics in political behavior. Before coming to Konstanz, he was professor ad interim at the University of Potsdam (2008) and assistant professor at the University of Mannheim (2001-2008). He received a Dr. phil (2001) and venia legendi (2007) for political science from the University of Mannheim."
+  bio: "Susumu Shikano is Professor of Political Methodology at University of Konstanz. He is doing research on spatial models of politics and diverse topics in political behavior. Before coming to Konstanz, he was professor ad interim at the University of Potsdam (2008) and assistant professor at the University of Mannheim (2001-2008). He received a Dr. phil (2001) and venia legendi (2007) for political science from the University of Mannheim. Since 2012 he has been the instructor of the courses ‘Bayesian statistics’ at the ECPR Summer/Winter School in Methods and Techniques. In 2020, he will teach ‘maximum likelihood estimation’ at the Essex Summer School in Social Science Data Analysis."
   website: https://www.polver.uni-konstanz.de/cdm/people/shikano/
 
