Naniette changed name of folder; updating all files accordingly

--- a/_data/2020/howard-mathematica/location.yml
+++ b/_data/2020/howard-mathematica/location.yml
@@ -2,5 +2,5 @@ image: /assets/images/howard.jpg
 title: Howard-Mathematica
 subtitle: Washington D.C.
 description: "From the evening of June 14 to June 26 2020, Howard University and Mathematica will host a partner event for the Summer Institute in Computational Social Science."
-link: howard
+link: howard-mathematica
 year: 2020
