--- a/_data/2020/stellenbosch/faculty.yml
+++ b/_data/2020/stellenbosch/faculty.yml
@@ -1,5 +1,6 @@
 - name: Richard Barnett
   bio: "Richard is a lecturer in the Department of Information Science at Stellenbosch University. He is a co-founder of the Computational Social Science Group at SU and is the group's resident Computer Scientist. His current research focus is on deep learning on graphs."
 - name: Douglas Parry
+  image: /assets/images/parry.png
   bio: "Dr Douglas is a lecturer in the Department of Information Science at Stellenbosch University. He is a co-founder of the Cognition and Technology Research group and his research concerns the interplay between digital technologies, human cognition, behaviour, performance, and affective well-being across a variety of life-situations."
   website: http://dougaparry.com
