fix typo location.yml

--- a/_data/2020/helsinki/location.yml
+++ b/_data/2020/helsinki/location.yml
@@ -1,6 +1,6 @@
 image: /assets/images/helsinki.jpg
 title: Helsinki
 subtitle: Helsinki, Finland
-description: "From May 25h to June 5th 2020, the University of Helsinki will host a partner event for the Summer Institute in Computational Social Science."
+description: "From May 25th to June 5th 2020, the University of Helsinki will host a partner event for the Summer Institute in Computational Social Science."
 link: helsinki
 year: 2020
