--- a/_data/2020/oxford/schedule.yml
+++ b/_data/2020/oxford/schedule.yml
@@ -10,8 +10,8 @@
     - name: Schedule to be confirmed...
       time: "09:00 - 18:00"
       
-- date: 2020-07-16
+- date: 2020-07-17
   name: End of the Oxford SICSS!
   events:
-    - name: "<b>Informal leaving dinner</b> (venue to be confirmed)"
-      time: "18:30 - 21:30" 
+    - name: "<b>Informal leaving lunch</b> (venue to be confirmed)"
+      time: "12:30 - 13:30" 
