add rutgers speaker

--- a/_data/2020/rutgers/speakers.yml
+++ b/_data/2020/rutgers/speakers.yml
@@ -1,3 +1,7 @@
+- name: Thomas Davidson
+  image: /assets/images/thomasDavidson.jpg
+  bio: "Thomas Davidson is a PhD candidate in Sociology at Cornell University. In fall 2020 he will be an Assistant Professor of Sociology at Rutgers University. He studies political discussions, hate speech, and other topics using digital trace data."
+
 - name: Daniel Hopkins
   image: /assets/images/danielhopkins.jpg
   bio: "Daniel Hopkins is Professor of Political Science at the University of Pennsylvania."
