--- a/_data/2020/rutgers/speakers.yml
+++ b/_data/2020/rutgers/speakers.yml
@@ -1,31 +1,37 @@
 - name: Thomas Davidson
   image: /assets/images/thomasDavidson.jpg
   bio: "Thomas Davidson is a PhD candidate in Sociology at Cornell University. In fall 2020 he will be an Assistant Professor of Sociology at Rutgers University. He studies political discussions, hate speech, and other topics using digital trace data."
+  website: https://www.thomasrdavidson.com/
 
 - name: Daniel Hopkins
   image: /assets/images/danielhopkins.jpg
   bio: "Daniel Hopkins is Professor of Political Science at the University of Pennsylvania."
-
+  website: http://web.sas.upenn.edu/danhop/
+  
 - name: Michael Kenwick
   image: /assets/images/michaelkenwick.jpg
   bio: "Michael Kenwick is Assistant Professor of Political Science at Rutgers University."
+  website: https://mkenwick.com/
 
 - name: Yanna Krupnikov
   image: /assets/images/yannakrupnikov.jpg
   bio: "Yanna Krupnikov is Associate Professor of Political Science at Stony Brook University."
-
+  website: https://www.yannakrupnikov.com/
+  
 - name: Katherine Ognyanova
   image: /assets/images/KatherineOgnyanova.jpg
   bio: "Katherine Ognyanova is an Assistant Professor at the School of Communication and Information at Rutgers University."
+  website: https://kateto.net/
 
 - name: Andrey Tomashevskiy
   image: /assets/images/andreyt.jpg
   bio: "Andrey Tomashevskiy is Assistant Professor of Political Science at Rutgers University."
+  website: https://www.polisci.rutgers.edu/cb-profile/andreyt
 
 - name: Simone Zhang
   image: /assets/images/SimoneZhang.jpg
   bio: "Simone Zhang is a PhD student in Sociology at Princeton University interested in social stratification, organizations, and how social policy is implemented on the ground."
- 
+  website: https://sxzh.github.io/
   
 - name: More to be added soon ...
 
