chicago add people

--- a/_data/2020/chicago/faculty.yml
+++ b/_data/2020/chicago/faculty.yml
@@ -1,1 +1,8 @@
-- name: Coming soon...
+- name: Joshua Becker
+  image: /assets/images/JoshuaBecker.jpeg
+  
+- name: Kat Albrecht
+  image: /assets/images/KatAlbrecht.jpeg
+  
+- name: Andrew Thompson
+  image: /assets/images/andrewThompson.jpg
