--- a/_data/2020/maastricht/faculty.yml
+++ b/_data/2020/maastricht/faculty.yml
@@ -1,1 +1,8 @@
-- name: Coming soon...
+- name: Monika Leszczyńska
+  image: /assets/images/monikaLeszczynska.jpg
+  bio: "Monika Leszczyńska is Assistant Professor of Empirical Legal Research at the Maastricht University Faculty of Law, Netherlands. She received her PhD in law from University of Bonn (Germany). In her research, she uses laboratory and online experiments as well as content analysis to deliver evidence-based insights to legal decision-makers on the impact of law on human behavior. Among others, she has researched how gender quotas influence group cooperation. She also studies how individuals make decisions in the online environment, i.e., how zero-price offers affect people’s decisions about their contractual rights and privacy. This research project has been funded by a Marie Skłodowska-Curie Individual Fellowship. In 2016/2017 Monika was a post-doctoral fellow at the New York University School of Law. During her doctoral studies, she was a research fellow at the Max Planck Institute for Research on Collective Goods in Bonn (Germany)."
+  website: https://empiricalcontracts.com/
+  
+- name: Catalina Goanta
+  bio: "Catalina is Assistant Professor in Private Law at Maastricht University and co-manager of the Maastricht Law and Tech Lab. Her current research addresses decentralization and Internet governance, with projects such as the regulation of social media influencers, where she looks at monetization and content moderation on social media. During February 2018 - February 2019, Catalina was a Niels Stensen fellow and visited the University of St. Gallen (The Institute of Work and Employment) and Harvard University (The Berkman Center for Internet and Society). Catalina is also a non-residential fellow of the Stanford Transatlantic Technology Law Forum, and was a visiting researcher at the Stanford Law School during September 2017."
+  website: https://www.maastrichtuniversity.nl/catalina.goanta
