--- a/_data/2020/chicago/faculty.yml
+++ b/_data/2020/chicago/faculty.yml
@@ -1,8 +1,14 @@
 - name: Joshua Becker
   image: /assets/images/JoshuaBecker.jpeg
+  bio: "Joshua Becker is a postdoctoral fellow and lecturer at Kellogg School of Management and a researcher in residence at the Northwestern Institute for Complex Systems.  Joshua will be starting on faculty somewhere awesome in Fall 2020, TBA.  They use agent-based models and online laboratory methods to study collective intelligence and group decision-making.  Joshua's current reserach focuses on how social influence in networks can improve or undermine factual belief accuracy."
+  website: https://www.joshua-becker.com
   
 - name: Kat Albrecht
   image: /assets/images/KatAlbrecht.jpeg
+  bio: "Kat Albrecht is a Law and Sciences Fellow in sociology and the Pritzker School of Law at Northwestern University. She is also a member of Luis Amaral’s Complex Systems Lab in the McCormick School of Engineering. Kat’s work sits at the intersection of computational social science and law, where she uses innovative computational techniques to study school gun violence, felony murder, Title IX policy, and racial disparity in arrest. Her work has been published in outlets like Nature Human Behavior, Law and Policy, and Studies in Law, Politics, and Society. Kat is also pleased to be an a research affiliate of the Duke University Center for Firearms Law in 2020."
+  website: https://katalbrecht.org/
   
 - name: Andrew Thompson
   image: /assets/images/andrewThompson.jpg
+  bio: ""
+  website: 
