--- a/_data/2020/chicago/faculty.yml
+++ b/_data/2020/chicago/faculty.yml
@@ -10,5 +10,5 @@
   
 - name: Andrew Thompson
   image: /assets/images/andrewThompson.jpg
-  bio: ""
-  website: 
+  bio: "Andrew Thompson is a PhD candidate in Political Science at Northwestern University. His research interests span public opinion, causal inference, climate change, and immigration. His current work explores how demographic changes affect political attitudes and policy opinion using experimental and computational methods. Andrew holds a BA in Political Science and Philosophy from Marquette University."
+  website: https://sites.northwestern.edu/athompson/
