--- a/_data/2020/milano/faculty.yml
+++ b/_data/2020/milano/faculty.yml
@@ -8,7 +8,7 @@
   website: http://www.taylorwhittenbrown.com/
 
 - name: Arnstein Aassve
-  bio: Professor at Bocconi University
+  bio: Professor of Demography at Bocconi University
   website: http://faculty.unibocconi.eu/arnsteinaassve/
 
 - name: Francesco Billari
@@ -16,5 +16,9 @@
   website: http://faculty.unibocconi.eu/francescocandelorobillari/
   
 - name: Paul Matthew Loveless
-  bio: Associate Professor in the Department of Political and Social Sciences at the University of Bologn
+  bio: Associate Professor in the Department of Political and Social Sciences at the University of Bologna
   website: https://www.unibo.it/sitoweb/paulmatthew.loveless/en
+
+- name: Marco Albertini
+  bio: Associate Professor in the Department of Political and Social Sciences at the University of Bologna
+  website: https://www.unibo.it/sitoweb/marco.albertini2/en
