--- a/_data/2020/howard-mathematica/sidebar.yml
+++ b/_data/2020/howard-mathematica/sidebar.yml
@@ -4,3 +4,7 @@
   url: "people"
 - name: Schedule & Materials
   url: "schedule"
+- name: Topical Focus
+  url: "topical-focus"
+- name: The SICSS-Howard/Mathematica Difference
+  url: "sicss-howard-mathematica-difference"
