--- a/_data/2020/howard-mathematica/sidebar.yml
+++ b/_data/2020/howard-mathematica/sidebar.yml
@@ -1,4 +1,4 @@
-- name: The SICSS-Howard/Mathematica Vision
+- name: SICSS-Howard/Mathematica Vision
   url: "sicss-howard-mathematica-vision"
 - name: "Apply"
   url: "apply"
