--- a/_data/2020/paris/schedule.yml
+++ b/_data/2020/paris/schedule.yml
@@ -1,7 +1,5 @@
-This is a provisional schedule. 
-
 - date: 2020-06-23
-  name: Introduction and Logistics
+  name: Introduction and Logistics - Please note, this is a provisional schedule. 
   events:
     - name: "Morning : Participants arrive"
     - name: "12:00 - 2:00 Opening Lunch & Logistics"
