--- a/_data/2020/tokyo/teaching_assistants.yml
+++ b/_data/2020/tokyo/teaching_assistants.yml
@@ -1,1 +1,3 @@
-- name:
+- name: Hirotake Ito
+  image: /assets/images/HirotakeIto.jpg
+  bio: "Hirotake Ito is a Researcher of Policy Management and a Ph.D. student at Keio University. He completed a master's course in economics at Hitotsubashi University. He has experience working for an asset management company and a data analysis company."
