--- a/_data/2020/milano/faculty.yml
+++ b/_data/2020/milano/faculty.yml
@@ -1,10 +1,10 @@
 - name: Nicolò Cavalli
   image: /assets/images/nicolo_cavalli.png
-  bio: Nicolò is a DPhil candidate in Sociology at Nuffield College, University of Oxford. He holds a BA in Politics from University of Bologna and a MSc in Economics from Bocconi University, Milan. Before joining Nuffield College, Nicolò worked as journalist, reporting on social issues and political movements from Italy, Greece, Catalunya, California and Peru. His Doctoral Thesis focuses on how intergroup emotional stratification emerged in Europe in times of economic recession.
+  bio: Nicolò is a DPhil candidate in Sociology at Nuffield College, University of Oxford and a Postdoctoral researcher at Bocconi’s Ifamid group, working on intergroup relations and computational approaches to the study of identities and life course transitions. He holds a BA in Politics from the University of Bologna and an MSc in Economics and Social Sciences from Bocconi. He was a participant to SICSS-2018 at Duke University and a co-organiser to SICSS-Oxford in 2019.
 
 - name: Taylor Brown
   image: /assets/images/taylor_brown.jpg
-  bio: A visiting scholar at NYU, Taylor Brown is a doctoral candidate in the Duke Sociology department, with association at the Duke Network Analysis Center. She has broad interests in computational methods and social media studies. Her dissertation explores gender inequality in creative professions. Taylor holds an MA in sociology from UNC-Chapel Hill and an MSc in evidence-based social intervention from the University of Oxford. Prior to beginning her PhD, Taylor fulfilled an appointment at the National Science Foundation in the division of Social and Economic Sciences.
+  bio: Based in New York, Taylor Brown is a doctoral candidate in the Duke Sociology department, with association at the Duke Network Analysis Center. She has broad interests in computational methods and social media studies. Her dissertation explores gender inequality in creative professions. Taylor holds an MA in sociology from UNC-Chapel Hill and an MSc in evidence-based social intervention from the University of Oxford. Prior to beginning her PhD, Taylor fulfilled an appointment at the National Science Foundation in the division of Social and Economic Sciences. SICSS TA 2017 & 2018, co-organizer to SICSS-Oxford 2019 & SICSS-NYU 2020. 
   website: http://www.taylorwhittenbrown.com/
 
 - name: Arnstein Aassve
