--- a/_data/2020/howard-mathematica/hero.yml
+++ b/_data/2020/howard-mathematica/hero.yml
@@ -1,3 +1,3 @@
-header_2: "June 14 to June 26, 2020 | Washington D.C."
+header_2: "June 14 to June 26, 2020 | Howard-Mathematica | Washington D.C."
 header_3: "Sponsored by Howard University and Mathematica"
-location: "Howard-Mathematica"
+location: "SICSS-Howard-Mathematica"
