--- a/_data/2020/istanbul/hero.yml
+++ b/_data/2020/istanbul/hero.yml
@@ -1,3 +1,3 @@
-header_2: "June 14 to June 27, 2020 | Istanbul"
+header_2: "June 14 to June 27, 2020 | Kadir Has University | Istanbul"
 header_3: "Sponsored by Kadir Has University"
-location: "Istanbul"
+location: "SICSS-Istanbul"
