--- a/_data/2020/montreal/hero.yml
+++ b/_data/2020/montreal/hero.yml
@@ -1,3 +1,3 @@
-header_2: "June 14 to June 27, 2020 | Montreal"
+header_2: "June 14 to June 27, 2020 | UQAM | Montreal, Québec"
 header_3: "Sponsored by Université du Québec à Montréal (UQAM)"
-location: "Montreal"
+location: "SICSS-Montreal"
