--- a/_data/2020/nyu/teaching_assistants.yml
+++ b/_data/2020/nyu/teaching_assistants.yml
@@ -1,1 +1,3 @@
-- name:
+- name: Di Zhou
+  image: /assets/images/zhou_di.jpg
+  bio: Di Zhou is a doctoral student in the Sociology department at NYU. She is interested in political sociology and computational methods. She holds an MA in Social Sciences from UChicago. Her master thesis explored the formation of the pro-Trump discourse in a Chinese online forum during the 2016 general election using computational text analysis combined with in-depth interviews.
