--- a/_data/2020/konstanz/teaching_assistants.yml
+++ b/_data/2020/konstanz/teaching_assistants.yml
@@ -1,1 +1,9 @@
-- name:
+- name: Franziska Weeber
+  image: /assets/images/FranziskaWeeber.jpeg
+  bio: "Franziska is currently pursuing her MSc in Social and Economic Data Science at the University of Konstanz. She is interested in the application of computational methods for data retrieval and exploratory analysis as well as the impact of digital technology on social inequality and culture. She has experience in working as a teaching assistant for statistics, quantitative methods and applied data analysis. Moreover, she participated at SICSS 2019 in Bamberg."
+  website: 
+  
+  - name: Philipp Bosch
+  image: 
+  bio: "Philipp Bosch is currently pursuing a Master's degree in Social and Economic Data Science at the University Konstanz. Previously he finished his Bachelor in Politics and Administration at the University Konstanz. Philipp is particularly interested in research concerning political behavior and public opinion with a focus on the formation of radical attitudes. In the past he gained teaching experience in undergrad courses for statistics and empirical research methods."
+  website: 
