--- a/_data/2020/konstanz/teaching_assistants.yml
+++ b/_data/2020/konstanz/teaching_assistants.yml
@@ -4,6 +4,6 @@
   website: 
   
   - name: Philipp Bosch
-  image: 
+  image: /assets/images/PhilippBosch.png
   bio: "Philipp Bosch is currently pursuing a Master's degree in Social and Economic Data Science at the University Konstanz. Previously he finished his Bachelor in Politics and Administration at the University Konstanz. Philipp is particularly interested in research concerning political behavior and public opinion with a focus on the formation of radical attitudes. In the past he gained teaching experience in undergrad courses for statistics and empirical research methods."
   website: 
