--- a/_data/2020/howard-mathematica/hero.yml
+++ b/_data/2020/howard-mathematica/hero.yml
@@ -1,3 +1,4 @@
-header_2: "June 14 to June 26, 2020 | Howard-Mathematica | Washington D.C."
+header_2: "June 14 to June 26, 2020 | Howard/Mathematica | Washington D.C. 
+<i>SICSS-Howard/Mathematica: Lifting New Voices to Address Ethics and Equity in AI</i>"
 header_3: "Sponsored by Howard University and Mathematica"
-location: "SICSS-Howard-Mathematica"
+location: "SICSS-Howard/Mathematica"
