--- a/_data/2020/maastricht/faculty.yml
+++ b/_data/2020/maastricht/faculty.yml
@@ -4,5 +4,6 @@
   website: https://empiricalcontracts.com/
   
 - name: Catalina Goanta
+  image: /assets/images/GoantaC.png
   bio: "Catalina is Assistant Professor in Private Law at Maastricht University and co-manager of the Maastricht Law and Tech Lab. Her current research addresses decentralization and Internet governance, with projects such as the regulation of social media influencers, where she looks at monetization and content moderation on social media. During February 2018 - February 2019, Catalina was a Niels Stensen fellow and visited the University of St. Gallen (The Institute of Work and Employment) and Harvard University (The Berkman Center for Internet and Society). Catalina is also a non-residential fellow of the Stanford Transatlantic Technology Law Forum, and was a visiting researcher at the Stanford Law School during September 2017."
   website: https://www.maastrichtuniversity.nl/catalina.goanta
