--- a/_data/2020/istanbul/teaching_assistants.yml
+++ b/_data/2020/istanbul/teaching_assistants.yml
@@ -1,1 +1,3 @@
-- name:
+- name: Damla Partanaz
+  image: /2019/istanbul/images/Damla_Pa.png
+  bio: "She is a Ph.D. student in Management Information Systems at Kadir Has University and works there as a visiting research assistant. She has completed her master’s degree in New Media and comes from an Interactive Media Design background. Damla is interested in design implications of Artificial Intelligence, Human-Machine Collaboration, mental models and system design. Currently, she is working on her system design project in which human creativity meets with machine learning in coping with undesired behavior models. She is also in the design committee of Kadir Has University’s Computational Thinking undergraduate program curriculum."
