--- a/_data/2020/konstanz/teaching_assistants.yml
+++ b/_data/2020/konstanz/teaching_assistants.yml
@@ -7,3 +7,8 @@
   image: /assets/images/PhilippBosch.png
   bio: "Philipp Bosch is currently pursuing a Master's degree in Social and Economic Data Science at the University Konstanz. Previously he finished his Bachelor in Politics and Administration at the University Konstanz. Philipp is particularly interested in research concerning political behavior and public opinion with a focus on the formation of radical attitudes. In the past he gained teaching experience in undergrad courses for statistics and empirical research methods."
   website: 
+  
+  - name: Jana Schwarz
+  image: /assets/images/
+  bio: "Jana is currently studying an MA in Politics and Public Administration with a specialization in International Administration and Conflict Management at the University of Konstanz. During her bachelor’s degree she developed a growing interest in international relations and global governance issues and wrote her thesis on the impact of immigration on right-wing populist voting behavior and if migration does explain the rise of the AfD in Germany. Apart from that she has gained working experience as a student teacher in statistics and management aswell as vice president of the student’s union."
+  website: 
