--- a/_data/2020/rutgers/hero.yml
+++ b/_data/2020/rutgers/hero.yml
@@ -1,3 +1,3 @@
-header_2: "June 15 to June 26, 2020 | New Brunswick, NJ"
+header_2: "June 15 to June 26, 2020 | Rutgers University | New Brunswick, NJ"
 header_3: "Sponsored by the Rutgers University Library and Department of Political Science"
 location: "SICSS-Rutgers"
