--- a/_data/2020/rutgers/speakers.yml
+++ b/_data/2020/rutgers/speakers.yml
@@ -23,6 +23,11 @@
   bio: "Katherine Ognyanova is an Assistant Professor at the School of Communication and Information at Rutgers University."
   website: https://kateto.net/
 
+- name: Adam Thal
+  image: /assets/images/adamthal.jpg
+  bio: "Adam Thal is a Postdoctoral Associate at the Institution for Social and Policy Studies at Yale University."
+  website: https://www.adamthal.com
+
 - name: Andrey Tomashevskiy
   image: /assets/images/andreyt.jpg
   bio: "Andrey Tomashevskiy is Assistant Professor of Political Science at Rutgers University."
