--- a/_data/2020/los_angeles/hero.yml
+++ b/_data/2020/los_angeles/hero.yml
@@ -1,3 +1,3 @@
-header_2: "June 15 to June 26, 2020 | Los Angeles"
+header_2: "June 15 to June 26, 2020 | UCLA| Los Angeles, California"
 header_3: "University of California"
-location: "Los Angeles"
+location: "SICSS-Los Angeles"
