--- a/_data/2020/hse/schedule.yml
+++ b/_data/2020/hse/schedule.yml
@@ -11,7 +11,7 @@
     - name: "13:15 - 13:30 Coffee Break"
     - name: "13:30 - 15:00 Guest Speaker"
     - name: "15:00 - 16:30 Lunch"
-    - name: "16:30 - 17:30 Meetings with guest speakers (*Not open to public/No livestream*)"
+    - name: "16:30 - 17:30 Flash-talks by organizers and participants (*Not open to public/No livestream*)"
     - name: "17:30 - 18:00 Introduction to computational social science (live from Duke)"
     - name: "18:00 - 18:30 Why SICSS? (live from Duke)"
     - name: "18.30 - 18:45 Coffee Break"
@@ -44,7 +44,7 @@
     - name: "13:30 - 13:45 Coffee break"
     - name: "13:45 - 15:00 Continue group exercise (*Not open to public/No livestream*)"
     - name: "15:00 - 16:00 Lunch"
-    - name: "16:00 - 17:00 Guest Speaker"
+    - name: "16:00 - 17:00 Flash-talks by organizers and participants (*Not open to public/No livestream*)"
     - name: "17:15 - 17:30 History of quantitative text analysis (live from Duke)"
     - name: "17:30 - 17:45 Basic Text Analysis/GREP (live from Duke)"
     - name: "18:15 - 19:15 Topic models/Structural Topic Models (live from Duke)"
@@ -77,7 +77,7 @@
     - name: "13:30 - 13:45 Coffee break"
     - name: "13:45 - 15:00 Continue group exercise, discuss activity and open-source data (*Not open to public/No livestream*)"
     - name: "15:00 - 16:00 Lunch"
-    - name: "16:00 - 17:00 Guest Speaker"
+    - name: "16:00 - 17:00 Flash-talks by organizers and participants (*Not open to public/No livestream*)"
     - name: "17:15 - 17:45 Mass collaboration (live from Duke)"
     - name: "17:45 - 18:15 The Fragile Families Challenge (live from Duke)"
     - name: "18:15 - 18:30 Coffee break"
@@ -91,7 +91,7 @@
     - name: "11:45 - 13:30 Fragile Families Challenge (*Not open to public/No livestream*)"
     - name: "13:30 - 13:45 Discussion of the Fragile Families Challenge (*Not open to public/No livestream*)"
     - name: "13:45 - 14:00 Break"
-    - name: "14:00 - 15:30 Guest speaker"
+    - name: "14:00 - 15:30 Flash-talks by organizers and participants (*Not open to public/No livestream*)"
     - name: "15:30 - 17:15 Lunch"
     - name: "17:15 - 17:30 What, why, and which experiments? (live from Duke)"
     - name: "17:30 - 17:45 Moving beyond simple experiments (live from Duke)"
