--- a/_data/2020/paris/schedule.yml
+++ b/_data/2020/paris/schedule.yml
@@ -1,16 +1,16 @@
 - date: 2020-06-23
   name: Introduction and Logistics - Please note, this is a provisional schedule. 
   events:
-    - name: "Morning : Participants arrive"
+    - name: "Morning : Participants arrival"
     - name: "12:00 - 2:00 Opening Lunch & Logistics"
     - name: "2:00 - 4:00 What are Computational Social Sciences?"
     - name: "4:00 - 4:15 Coffee Break - Pause café"
-    - name: "4:15 - 6:00 A quick recap on R (optional)"
+    - name: "4:15 - 6:00 A quick recap about R (optional)"
 
 - date: 2020-06-24
   name: Collecting Digital Trace Data
   events: 
-    - name: "Morning: How is the Web Written and how to collect data?"
+    - name: "Morning: How is the web written and how to collect data on it?"
     - name: "Afternoon: Group exercise"
     - name: "5:30 - 6:30 : Guest Speaker: to be announced"
     
@@ -50,9 +50,11 @@
     - name: "Morning: Machine Learning for social sciences: issues and methods"
     - name: "Afternoon: Group exercise"
     - name: "5:30 - 6:30 : Guest Speaker - to be announced"
+    - name: "From 7pm : closing dinner"
+
 
 - date: 2020-07-02
   name: Work on projects
   events:
-    - name: "6:00 Closing dinner"
-    - name: "Participants depart"
+    - name: "Morning: Perspectives and comments. Closing remarks"
+    - name: "Lunch & departure"
