--- a/_data/2020/montreal/faculty.yml
+++ b/_data/2020/montreal/faculty.yml
@@ -4,6 +4,6 @@
   website: https://sociologie.uqam.ca/corps-professoral/professeurs-es/professeur/adjiwanou.visseho/
 
 - name: Julie Hussin
-  image: 
+  image: /assets/images/Hussin.jpg
   bio: "Dr. Hussin is an early career Principal Investigator at the Montreal Heart Institute since January 2017 and Assistant Professor in the Department of Medicine of the Faculty of Medicine at Université de Montréal. She is an active member of the Institute for Data Valorization (IVADO) funded by Canada First Excellence Funds. She has extensive expertise in computational biology, statistics, molecular evolution and human genetics. In particular, she is an expert in population genetics and has worked on natural selection and population demography in the founding population of Quebec, deepening our understanding of the French-Canadians’ genetic make-up.  Her bioinformatics team have significant experience in handling and integrating large datasets and in developing computational tools, including Bayesian methods and machine learning approaches in genomics."
   website: https://mhi-omics.org/
