--- a/_data/2020/stellenbosch/faculty.yml
+++ b/_data/2020/stellenbosch/faculty.yml
@@ -1,4 +1,5 @@
 - name: Richard Barnett
+  image: /assets/images/Barnett.gif
   bio: "Richard is a lecturer in the Department of Information Science at Stellenbosch University. He is a co-founder of the Computational Social Science Group at SU and is the group's resident Computer Scientist. His current research focus is on deep learning on graphs."
 - name: Douglas Parry
   image: /assets/images/parry.png
