--- a/_data/2020/stellenbosch/teaching_assistants.yml
+++ b/_data/2020/stellenbosch/teaching_assistants.yml
@@ -1,1 +1,3 @@
-- name:
+- name: Petrus Schoonwinkel
+  bio: "Petrus Schoonwinkel is a postgraduate Socio-Informatics student at Stellenbosch University. He is also affiliated with the Computational Social Science Group at the Department of Information Science. His research examines automated account classification, characterisation of networks on Twitter and social network analysis in general using tools from the field of computational social science. He's written and presented several papers on bot detection and classification, and is currently in the second year of his Master's thesis on characterisation of networks with minimal domain knowledge."
+  image: /assets/images/Schoonwinkel.jpg
