--- a/_data/2020/konstanz/teaching_assistants.yml
+++ b/_data/2020/konstanz/teaching_assistants.yml
@@ -12,3 +12,8 @@
   image:
   bio: "Jana is currently studying an MA in Politics and Public Administration with a specialization in International Administration and Conflict Management at the University of Konstanz. During her bachelor’s degree she developed a growing interest in international relations and global governance issues and wrote her thesis on the impact of immigration on right-wing populist voting behavior and if migration does explain the rise of the AfD in Germany. Apart from that she has gained working experience as a student teacher in statistics and management aswell as vice president of the student’s union."
   website: 
+
+- name: Rahkakavee Baskaran
+  image: /assets/images/RahkakaveeBaskaran.jpg
+  bio: "Rahkakavee Baskaran is currently pursuing a Master’s degree in Politics and Public Administration at the University of Konstanz. She is particularly interested in comparative politics, as well as empirical and statistical analysis, especially with regard to electoral research. In the past Rahkakavee gained considerable teaching experience in statistic and methods working as a tutor for these subjects."
+  website: 
