--- a/_data/2020/beijing/faculty.yml
+++ b/_data/2020/beijing/faculty.yml
@@ -1,5 +1,5 @@
 - name: Yan Leng
-  image: /assets/images/yan.jpg
+  image: /assets/images/yanLeng_new.jpeg
   bio: "Yan Leng is a Ph.D. candidate at the MIT Media Lab. She will join the McCombs School of Business, the University of Texas at Austin as an Assistant Professor in Fall 2020. She holds master degrees in Computer Science and Transportation Engineering, both from MIT. Yan is a network scientist working on social science problems. Her research lies in the intersection of machine learning, network theory, and causal inference. She uses large-scale behavioral data to understand collective human behavior over social networks and builds computational techniques for solving societal and organizational issues."
   website: http://web.mit.edu/yleng/www/
 
