--- a/_data/2020/paris/speakers.yml
+++ b/_data/2020/paris/speakers.yml
@@ -1,6 +1,6 @@
 - name: Jean-Philippe Cointet
   image: /assets/images/JPCointet.png
-  bio: "Jean-Philippe Cointet is a Researcher at Sciences Po Médialab where he works on the development of innovative computational sociology methods. Prior to his arrival, he participated in various quali-quantitative research projects including social media analysis (Facebook, public comments), science dynamics (oncology collective thoughts (CIHR project), synthetic biology emergence), political processes (political discourses, climate change negotiations). He also designs the CorText platform."
+  bio: "Jean-Philippe Cointet is a Researcher at Sciences Po Médialab where he works on the development of innovative computational sociology methods. He participated in various quali-quantitative research projects including social media analysis (Facebook, public comments), science dynamics (oncology collective thoughts (CIHR project), synthetic biology emergence), political processes (political discourses, climate change negotiations). He also designs the CorText platform."
   website: https://medialab.sciencespo.fr/en/people/jean-philippe-cointet/
 
 - name: Salomé Do
@@ -30,7 +30,7 @@
 
 - name: Sander Wagner
   image: /assets/images/SanderWagner.jpg
-  bio: "Sander Wagner is an Assistant Professor at the Laboratoire de Sociologie Quantitative (LSQ) at CREST / ENSAE. "
+  bio: "Sander Wagner is an Assistant Professor at the Laboratoire de Sociologie Quantitative (LSQ) at CREST / ENSAE."
   website: https://sites.google.com/site/sanderwagner/home
 
  - name: More to be added soon ...
