--- a/_data/2020/paris/speakers.yml
+++ b/_data/2020/paris/speakers.yml
@@ -14,7 +14,7 @@
   website: https://sites.google.com/site/webpagehollard/
   
 - name: Thomas Louail
-  image: /assets/images/ThomasLouail
+  image: /assets/images/ThomasLouail.jpg
   bio: "Thomas Louail is Research Fellow at the National Centre for Scientific Research (CNRS) and a member of UMR Géographie-cités based in Paris. He holds a PhD in Computer Science and worked at the Institut de Physique Théorique [CEA] & at the Institute for Cross-Disciplinary Physics and Complex Systems [IFISC] in Palma. His research focuses on analysing large-scale individual data to measure, model and develop - hopefully - a better understanding of social dynamics."
   website: https://scholar.google.fr/citations?user=pZAtLJMAAAAJ&hl=fr
 
