--- a/_data/2020/paris/speakers.yml
+++ b/_data/2020/paris/speakers.yml
@@ -15,7 +15,7 @@
   
 - name: Thomas Louail
   image: /assets/images/ThomasLouail.jpg
-  bio: "Thomas Louail is Research Fellow at the National Centre for Scientific Research (CNRS) and a member of UMR Géographie-cités based in Paris. He holds a PhD in Computer Science and worked at the Institut de Physique Théorique [CEA] & at the Institute for Cross-Disciplinary Physics and Complex Systems [IFISC] in Palma. His research focuses on analysing large-scale individual data to measure, model and develop - hopefully - a better understanding of social dynamics."
+  bio: "Thomas Louail is a Research Fellow at the National Centre for Scientific Research (CNRS) and a member of UMR Géographie-cités based in Paris. He holds a PhD in Computer Science and worked at the Institut de Physique Théorique [CEA] & at the Institute for Cross-Disciplinary Physics and Complex Systems (IFISC) in Palma. His research focuses on analysing large-scale individual data to measure, model and develop - hopefully - a better understanding of social dynamics."
   website: https://scholar.google.fr/citations?user=pZAtLJMAAAAJ&hl=fr
 
 - name: Ivaylo Petev
@@ -25,12 +25,12 @@
   
 - name: Paula Tubaro
   image: /assets/images/PaolaTubaro.jpg
-  bio: "Paola Tubaro an associate research professor at the National Centre for Scientific Research. Her work focuses on facilitating inter-disciplinary dialogue to leverage today’s growing capacity to collect and analyze data at both small and large scale and to model complex systems, to reveal yet-unknown patterns of individual and group behaviors. She teaches teach the sociology of social networks at ENS/EHESS, and social and economic network science at ENSAE."
+  bio: "Paola Tubaro is an associate research professor at the National Centre for Scientific Research (CNRS). Her work focuses on facilitating inter-disciplinary dialogue to leverage today's growing capacity to collect and analyze data at both small and large scale and to model complex systems, to reveal yet-unknown patterns of individual and group behaviors. She teaches teach the sociology of social networks at ENS-EHESS, and social and economic network science at ENSAE."
   website: https://databigandsmall.com/
 
 - name: Sander Wagner
   image: /assets/images/SanderWagner.jpg
-  bio: "Sander Wagner is an Assistant Professor at the Laboratoire de Sociologie Quantitative (LSQ) at CREST / ENSAE."
+  bio: "Sander Wagner is an Assistant Professor at the Laboratoire de Sociologie Quantitative (LSQ) at CREST-ENSAE."
   website: https://sites.google.com/site/sanderwagner/home
 
  - name: More to be added soon ...
