--- a/_data/2020/paris/speakers.yml
+++ b/_data/2020/paris/speakers.yml
@@ -10,7 +10,7 @@
 
 - name: Guillaume Hollard
   image: /assets/images/GuillaumeHollard.jpg
-  bio: "Guillaume Hollard is an Associate Professor at Ecole Polytechnique. His work focuses on public and individual decision making"
+  bio: "Guillaume Hollard is an Associate Professor at Ecole Polytechnique. His work focuses on public and individual decision making."
   website: https://sites.google.com/site/webpagehollard/
 
 - name: Thomas Louail
