--- a/_data/2020/bay_area/people.yml
+++ b/_data/2020/bay_area/people.yml
@@ -8,7 +8,7 @@ organizers:
 
     - name: Jaren Haber
       image: /assets/images/jaren_haber.png
-      bio: Jaren Haber is a PhD candidate in sociology at the University of California, Berkeley. His research applies computational methods to study how organizational contexts shape the impacts of structural inequalities. Jaren has studied whether charter school identities reinforce stratification by race and class, and at SICSS 2019 he joined Nick and Jae (fellow BAY-SICSS organizers) to conduct experiments evidencing how school websites' racial cues influence perceptions of school quality. He also studies text analysis workflows for social science. Jaren is currently on the job market and appreciates referrals. (
+      bio: Jaren Haber is a PhD candidate in sociology at the University of California, Berkeley. His research applies computational methods to study how organizational contexts shape the impacts of structural inequalities. Jaren has studied whether charter school identities reinforce stratification by race and class, and at SICSS 2019 he joined Nick and Jae (fellow BAY-SICSS organizers) to conduct experiments evidencing how school websites' racial cues influence perceptions of school quality. He also studies text analysis workflows for social science. Jaren is currently on the job market and appreciates referrals.
       website: https://www.jarenhaber.com/
 
     - name: Nick Camp
@@ -21,7 +21,7 @@ teachingassistants:
   people:
     - name: AJ Alvero
       image: /assets/images/Alvero_KBAKT.jpg
-      bio: AJ is a PhD candidate in Education at Stanford University. His research lies at the intersection of the sociology of education, sociolinguistics, and data science. His ongoing dissertation work examines a large corpus of college admissions essays written by Latinx identifying students to understand the relationships between an applicant's context and the content of their essay. Outside of research, AJ has experience with activism and advocacy in his hometown of Salinas, CA. Prior to starting the PhD program, AJ was a high school English teacher in Miami, FL
+      bio: AJ is a PhD candidate in Education at Stanford University. His research lies at the intersection of the sociology of education, sociolinguistics, and data science. His ongoing dissertation work examines a large corpus of college admissions essays written by Latinx identifying students to understand the relationships between an applicant's context and the content of their essay. Outside of research, AJ has experience with activism and advocacy in his hometown of Salinas, CA. Prior to starting the PhD program, AJ was a high school English teacher in Miami, FL.
       
     - name: Emily Grabowski
       image: /assets/images/emily_grabowski.jpeg
@@ -37,7 +37,7 @@ teachingassistants:
  
     - name: Saqib Mumtaz
       image: /assets/images/SaqibMChouhdary.jpg
-      bio: Saqib is a PhD student at the Haas School of Business, UC Berkeley. He completed a bachelor's degree in Electrical Engineering from Indian Institute of Technology and a master's degree in Public Policy from the Goldman School of Public Policy. He previously worked on technology policy issues in the Indian context. His research interests include entrepreneurship, technology and innovation policy, and social networks
+      bio: Saqib is a PhD student at the Haas School of Business, UC Berkeley. He completed a bachelor's degree in Electrical Engineering from Indian Institute of Technology and a master's degree in Public Policy from the Goldman School of Public Policy. He previously worked on technology policy issues in the Indian context. His research interests include entrepreneurship, technology and innovation policy, and social networks.
 
     - name: Tyler McDaniel
       image: /assets/images/tyler_mcdaniel.JPG
