--- a/_data/2020/bay_area/people.yml
+++ b/_data/2020/bay_area/people.yml
@@ -3,7 +3,7 @@ faculty:
   people:
     - name: Sharad Goel
       image: /assets/images/sharad_goel.png
-      bio: Sharad Goel is an assistant professor at Stanford in the Department of Management Science & Engineering, in the School of Engineering. He also has courtesy appointments in Computer Science, Sociology, and the Law School. His primary area of research is computational social science, an emerging discipline at the intersection of computer science, statistics, and the social sciences. He's particularly interested in applying modern computational and statistical techniques to understand and improve public policy. He's the founder and executive director of the Stanford Computational Policy Lab, a team of researchers, data scientists, and journalists that addresses policy problems through technical innovation. 
+      bio: Sharad Goel is an assistant professor at Stanford in the Department of Management Science & Engineering, in the School of Engineering. He also has courtesy appointments in Computer Science, Sociology, and the Law School. His primary area of research is computational social science, an emerging discipline at the intersection of computer science, statistics, and the social sciences. Sharad is particularly interested in applying modern computational and statistical techniques to understand and improve public policy. Sharad is the founder and executive director of the Stanford Computational Policy Lab, a team of researchers, data scientists, and journalists that addresses policy problems through technical innovation. 
       website: https://5harad.com/
     - name: David Harding 
       image: /assets/images/david_harding.jpg
