--- a/_data/2020/chicago/speakers.yml
+++ b/_data/2020/chicago/speakers.yml
@@ -1,1 +1,8 @@
-- name:
+- name: Remote Live Stream
+  bio:  "Matt Salganik, Chris Bail, Dan Ariely, Zeynep Tufeckci, Elizabeth Bruch"
+- name: Sheena Erete
+  image: /2018/chicago/images/sheena.jpg
+  bio: "Sheena is an assistant professor in the College of Computing and Digital Media at DePaul University in Chicago, IL. Sheena co-directs the Technology for Social Good &#124; Research and Design Lab with Dr. Denise Nacu."
+- name: James Evans
+  image: /assets/images/jamesEvans.jpg
+  bio: "James Evans is a Professor at the University of Chicago and External Professor at the Santa Fe Institute. Professor Evans is the Director of the Knowledge Lab and the founder and director of the Computational Social Science program at the University of Chicago."
