--- a/_data/2020/montreal/speakers.yml
+++ b/_data/2020/montreal/speakers.yml
@@ -1,1 +1,5 @@
-- name: coming soon...
+- name: Richard Landers
+  image: /assets/images/landers.jpg
+  bio: "Richard N. Landers is an Associate Professor of Psychology at the University of Minnesota and holds the John P. Campbell Distinguished Professorship of Industrial-Organizational Psychology. His research concerns innovative technologies in psychometric assessment, employee selection, adult learning, and research methods, focusing recently on game-based assessment, gamification, artificial intelligence, and virtual reality. His work has been published in Journal of Applied Psychology, Computers in Human Behavior, and Psychological Methods, among others, and his work has been featured in popular outlets such as Forbes, Business Insider, and Popular Science. He is also a Fellow of the Society for Industrial and Organizational Psychology."
+  website: https://rlanders.net/
+- Name: More to come ... 
