--- a/_data/2020/montreal/schedule.yml
+++ b/_data/2020/montreal/schedule.yml
@@ -1,3 +1,48 @@
-- date: 2020-07-28
-  events:
+- date: 2020-06-15
+  events: 
     - name: "Schedule coming soon..."
+
+- date: 2020-06-16
+  events: 
+    - name: "Schedule coming soon..."
+
+- date: 2020-06-17
+  events: 
+    - name: "Schedule coming soon..."
+
+- date: 2020-06-18
+  events: 
+    - name: "Schedule coming soon..."
+
+- date: 2020-06-19
+  events: 
+    - name: "Schedule coming soon..."
+
+- date: 2020-06-20
+  events: 
+    - name: "Schedule coming soon..."
+
+- date: 2020-06-21
+  events: 
+    - name: "Day off / Repos"
+
+- date: 2020-06-22
+  events: 
+    - name: "Work on group project - projet en groupe"
+
+- date: 2020-06-23
+  events: 
+    - name: "Work on group project - projet en groupe"
+
+- date: 2020-06-24
+  events: 
+    - name: "Work on group project - projet en groupe"
+
+- date: 2020-06-25
+  events: 
+    - name: "Work on group project - projet en groupe"
+
+- date: 2020-06-26
+  events: 
+    - name: "Present group projects/conclusion - Présentation projets de groupe"
+    
