--- a/_data/2020/beijing/hero.yml
+++ b/_data/2020/beijing/hero.yml
@@ -1,3 +1,3 @@
-header_2: "June 14 to June 27, 2020 | Beijing"
+header_2: "June 14 to June 27, 2020 | Tsinghua University | Beijing, China"
 header_3: "Sponsored by Tsinghua University Beijing, China"
-location: "Beijing"
+location: "SICSS-Beijing"
