Standardize hero text

--- a/_data/2020/copenhagen/hero.yml
+++ b/_data/2020/copenhagen/hero.yml
@@ -1,3 +1,3 @@
-header_2: "SICSS-Copenhagen"
-header_3: "June 14 to June 26, 2020 | University of Copenhagen | Copenhagen, Denmark"
-location: "Copenhagen, Denmark"
+header_2: "June 14 to June 26, 2020 | University of Copenhagen | Copenhagen, Denmark"
+header_3: 
+location: "SICSS-Copenhagen"
