--- a/_data/2020/maastricht/hero.yml
+++ b/_data/2020/maastricht/hero.yml
@@ -1,3 +1,3 @@
-header_2: "June 14 to June 26, 2020 | Maastricht"
+header_2: "June 14 to June 26, 2020 | Maastricht University | Maastricht, Netherlands"
 header_3: "Sponsored by Maastricht University"
-location: "Maastricht"
+location: "SICSS-Maastricht"
