--- a/_data/2020/stellenbosch/speakers.yml
+++ b/_data/2020/stellenbosch/speakers.yml
@@ -1,3 +1,7 @@
 - name: Aldu Cornelissen
   bio: "Dr Aldu Cornelissen is a data scientist at Kantar. He is a specialist in Social Network Analysis and is a co-founder of the Computational Social Science Group at Stellenbosch University."
   image: /assets/images/Cornelissen.jpeg
+  
+- name: Schalk Visagie
+  bio: "Schalk Visagie is a data scientist with the Kantar Group's Global Innovations Team based in Cape Town, South Africa, where he works on natural language processing.  He completed his graduate studies at Stellenbosch University where his research primarily focused on minimum wage legislation and its relation to subjective well-being in South African labour markets.  He is currently studying Mathematics at the LSE."
+  image: /assets/images/SU_Schalk.png
