--- a/_data/2020/stellenbosch/speakers.yml
+++ b/_data/2020/stellenbosch/speakers.yml
@@ -2,6 +2,10 @@
   bio: "Dr Aldu Cornelissen is a data scientist at Kantar. He is a specialist in Social Network Analysis and is a co-founder of the Computational Social Science Group at Stellenbosch University."
   image: /assets/images/Cornelissen.jpeg
   
+- name: Kyle Finlay
+  bio: "Kyle runs an international data science team for a large market research firm. His team focuses on R&D, including in areas such as networks and NLP. In his spare time, he maintains a blog that applies a computational social science lens to understanding South African politics on social media. "
+  image: /assets/images/kyle.jpg
+  
 - name: Schalk Visagie
   bio: "Schalk Visagie is a data scientist with the Kantar Group's Global Innovations Team based in Cape Town, South Africa, where he works on natural language processing.  He completed his graduate studies at Stellenbosch University where his research primarily focused on minimum wage legislation and its relation to subjective well-being in South African labour markets.  He is currently studying Mathematics at the LSE."
   image: /assets/images/SU_Schalk.png
