--- a/_data/2020/duke/speakers.yml
+++ b/_data/2020/duke/speakers.yml
@@ -3,7 +3,7 @@
   bio: "Dan Ariely is the James B. Duke Professor of Psychology and Behavioral Economics at Duke University and a founding member of the Center for Advanced Hindsight. His studies decision-making and behavioral economics with applications to financial decisions, health and many other issues."
   website: http://danariely.com/
 
-- name: Zeynep Tufeckci
+- name: Zeynep Tufekci
   image: /assets/images/zeynep.jpg
   bio: "Zeynep Tufeckci is an Associate Professor at the UNC School of Information and Library Science (SILS) and a regular contributor to the New York Times Op-Ed section. Her academic work focuses on social movements and civics, privacy and surveillance, and social interaction."
   website: http://technosociology.org
